# Ballensammelwagen

messages/: CMakeLists.txt  package.xml
messages/msg/: CustomStatus.msg
yolo_object_detection/: package.xml  setup.py
yolo_object_detection/launch/: launch.py
yolo_object_detection/yolo_object_detection/: bale_approach.py  message_aggregator.py  motion_control_node.py  shutdown_button.py  ultraschall_node.py  yolo_detector_node.py
